@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.87 2004-07-25 00:21:29 wl Exp $
+$Id: NEWS,v 1.88 2004-07-31 18:49:51 karl Exp $
 This file records noteworthy changes.
 
   Copyright (C) 1992, 1993, 1994, 1995, 1996, 1997, 1998, 1999, 2000,
@@ -22,6 +22,7 @@ convenience, here's a url to one of the relevant sections:
 
 -------------------------------------------------------------------------------
 * Language:
+  . new command @abbr for general abbreviations.
   . new command @slanted to typeset text with a slanted font.
 * Distribution:
   . new convenience script texi2pdf, equivalent to texi2dvi --pdf (from tetex).
